hifiberry-audiocontrol (0.6.10) stable; urgency=medium

  * Added Cache Statistics API endpoint for monitoring cache performance and memory usage
  * Added Background Jobs API for tracking long-running operations with progress monitoring
  * Implemented thread-safe singleton background job manager with progress tracking
  * Integrated background job tracking with artist metadata update operations
  * Added comprehensive integration tests for cache and background jobs APIs
  * Enhanced API documentation with detailed endpoint specifications and examples
  * Added cache statistics endpoint providing disk/memory usage and limits information
  * Added background job listing and individual job status retrieval endpoints
  * Improved system monitoring capabilities for cache performance optimization
  * Fixed compilation issues with AttributeCache initialization function calls

 -- HiFiBerry <info@hifiberry.com>  Tue, 29 Jul 2025 12:00:00 +0000

hifiberry-audiocontrol (0.6.9) stable; urgency=medium

  * Refactored artist name splitting functionality into dedicated artistsplitter module
  * Moved artist splitting logic from musicbrainz.rs to new artistsplitter.rs for better organization
  * Enhanced artist splitting with comprehensive unit tests for complex multi-artist scenarios
  * Added FanArt.tv cover art provider integration with MusicBrainz support
  * Added TheAudioDB cover art provider implementation with caching
  * Enhanced cover art API with multiple provider support and improved response structure
  * Added M3U playlist parsing API for extracting URLs from playlists
  * Added Settings API for retrieving and updating configuration values
  * Enhanced song title splitting with separator preference and tracking
  * Added SongSplitManager for managing song title splitters with persistent storage
  * Improved metadata caching in MPDPlayerController with AttributeCache integration
  * Enhanced track addition with flexible metadata structure and caching