@@ -1,7 +1,7 @@
 [package]
 name = "audiocontrol"
-version = "0.6.10"
-authors = ["Daniel Matuschek <daniel@hifiberry.com>"]
+version = "0.6.11"
+authors = ["HiFiBerry <support@hifiberry.com>"]
 edition = "2021"
 description = "AudioControl server"
 homepage = "https://www.hifiberry.com"
